[package]
name = "forge-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "forge_server_x64"
crate-type = ["cdylib"]

[dependencies]
arma-rs.workspace = true
chrono.workspace = true
forge-lib = { path = "../../lib" }
serde.workspace = true
serde_json.workspace = true
surrealdb = { version = "3.1.3", default-features = false, features = ["protocol-http", "protocol-ws", "rustls"] }
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
